# uunit_schedule_bot

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: bot.py  config.py  constants.py  main.py  menu.py  parse_schedule.py  schedule_parsing.py  utils.py
app/database/: models.py  repo.py
